--- a/RandomWordsWeb/Pages/Shared/_Layout.cshtml
+++ b/RandomWordsWeb/Pages/Shared/_Layout.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WA_RazorPages</title>
+    <title>@ViewData["Title"] - Naključnik</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WA_RazorPages.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/RandomWordsWeb.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
