--- a/RandomWordsWeb/Pages/Shared/_Layout.cshtml
+++ b/RandomWordsWeb/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,11 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container" style="font-size:smaller">
+            Seznam besed iz <a href="http://bos.zrc-sazu.si/besede.html" target="_blank">Portala BOS</a>
+            Povezave na <a href="https://viri.cjvt.si/gigafida/" target="_blank">Gigafida 2.0</a>
+            <a href="https://fran.si/" target="_blank">Fran</a>
+            <a href="http://bos.zrc-sazu.si" target="_blank">Portal BOS</a>
         </div>
     </footer>
 
