--- a/RandomWordsWeb/wwwroot/css/site.css
+++ b/RandomWordsWeb/wwwroot/css/site.css
@@ -33,3 +33,27 @@ input {
 button {
     font-size: 20px;
 }
+
+label {
+    font-size: 12px;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+.afran {
+    font-size: 14px;
+}
